testing for bottom icons

--- a/src/css/SectionAboutUs.css
+++ b/src/css/SectionAboutUs.css
@@ -1,3 +1,4 @@
+
 .background2 {
     background-image: url("../../public/images/Rules\ Page.png");
     background-size: cover;
@@ -5,4 +6,6 @@
     background-position: center;
     overflow-y: hidden ! important;
     overflow-x: hidden ! important;
+    scroll-snap-align: start;
+    
 }
