added Layout for casa aurelia

--- a/src/css/CasaAurelia.css
+++ b/src/css/CasaAurelia.css
@@ -1,5 +1,5 @@
-.background2 {
-    background-image: url("../../public/images/Rules\ Page.png");
+.background3{
+    background-color: aliceblue;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
