--- a/client/src/components/login/header/Header.css
+++ b/client/src/components/login/header/Header.css
@@ -1,4 +1,4 @@
-header {
+.headerLogin {
   width: 100%;
   min-height: 100px;
   background: #282c34;
@@ -9,17 +9,17 @@ header {
   padding: 0 30px;
 }
 
-header a {
+.headerLogin a {
   color: white;
   text-transform: uppercase;
   letter-spacing: 1.5px;
 }
 
-header ul li {
+.headerLogin ul li {
   display: inline-block;
   padding: 10px 20px;
   opacity: 0.7;
 }
-header ul li:hover {
+.headerLogin ul li:hover {
   opacity: 1;
 }
