--- a/client/src/css/SectionCelso.css
+++ b/client/src/css/SectionCelso.css
@@ -4,6 +4,12 @@
     background-repeat: no-repeat;
     background-position: center;
 }
+.background90 {
+    background-image: url("../../public/images/bg2.JPG");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
 
 .kobe {
     background-image: url("../../public/images/bg1.jpg");
